force-app/main/default/objects/ContractLineItem.object
<CustomObject>
    <fields>
        <fullName>Inspection_Status__c</fullName>
        <label>Inspection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Inspection</fullName>
                </value>
                <value>
                    <fullName>Passed - No Issues</fullName>
                </value>
                <value>
                    <fullName>Failed - Repairable</fullName>
                </value>
                <value>
                    <fullName>Failed - Critical</fullName>
                </value>
                <value>
                    <fullName>Failed - Hazard</fullName>
                </value>
                <value>
                    <fullName>Wear and Tear</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RootAssetId__c</fullName>
        <formula>Asset.RootAssetId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RootAssetId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContract__c</fullName>
        <formula>ServiceContract.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServiceContract</label>
        <type>Text</type>
    </fields>
</CustomObject>